--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<button type="button">Scan WIFI</button>
+<button onclick="location.reload()">Scan WIFI</button>
 <br><br>
 <form method="get">
  SSID:<br>
