--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 <button onclick="location.reload()">Scan WIFI</button>
 <br><br>
-<form method="get">
+<form method="get" name="f1" action=" ">
  SSID:<br>
     <input list="ssids" name="ssid">
     <datalist id="ssids">
