add bootstrap framework to ESP32 web

--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
 <head>
 <meta charset="utf-8">
 <title>index</title>
-<!--<link rel="stylesheet" href="style.css">-->
+    <link rel="stylesheet" href="bootstrap.min.css">
+    <script src="echarts.min.js"></script>
 </head>
+
 <body>
 <button onclick="location.reload()">Scan WIFI</button>
 <br><br>
+
 <form method="get" name="f1" action=" ">
  SSID:<br>
     <input list="ssids" name="ssid">
@@ -21,5 +24,9 @@
     <input type="submit" value="Submit">
     <br>
 </form>
+
+    <script src="jquery.min.js"></script>
+    <script src="bootstrap.min.js"></script>
 </body>
+
 </html>
