--- a/www/index.html
+++ b/www/index.html
@@ -26,7 +26,7 @@
 </form>
 
     <script src="jquery.min.js"></script>
-    <script src="bootstrap.min.js"></script>
+    <script src="bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
