finish map and one AreaChart use chart.js

--- a/www/config.html
+++ b/www/config.html
@@ -2,23 +2,9 @@
 <html lang="zh-CN">
 <head>
     <meta charset="utf-8">
-    <title>index</title>
+    <title>config</title>
 </head>
 <body>
-<ul class="nav">
-    <li class="nav-item">
-        <a class="nav-link active" href="#">Active</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link disabled" href="#">Disabled</a>
-    </li>
-</ul>
 <button onclick="location.reload()">Scan WIFI</button>
 <br><br>
 <form method="post" name="f1" action="postwifi">
